# Milton

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: buzzer.rs  cartridge.rs  common.rs  display.rs  hardware.rs  hughes0488.rs  keyboard.rs  keypad.rs  lcd.rs  lib.rs  memory.rs  rotary.rs  settings.rs  tms1100.rs
core/src/tms1100/: execution.rs  mem.rs  mod.rs  pinio.rs  pla.rs
gui/: Cargo.toml
gui/src/: backend.rs  main.rs
src/: lib.rs  main.rs
src/tms1100/: mod.rs  pla.rs
