[workspace]

resolver = "2"

members = [
    "core",
    "gui",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "deny"
nursery = "deny"

# Clippy rant go brrrrr...
missing_const_for_fn = "allow"
new_without_default = "allow"
module_name_repetitions = "allow"
bool_to_int_with_if = "allow"